--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/jsonwebtoken": "^9.0.2",
     "@types/knex": "^0.16.1",
     "@types/node": "^18.11.2",
+    "@types/nodemailer": "^6.4.8",
     "@types/uuid": "^9.0.2",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
@@ -32,6 +33,7 @@
     "jsonwebtoken": "^9.0.0",
     "knex": "^2.3.0",
     "mysql": "^2.18.1",
+    "nodemailer": "^6.9.3",
     "objection": "^3.0.1",
     "uuid": "^9.0.0",
     "winston": "^3.8.2"
